<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="action_settings">Settings</string>
    <string name="title_text">My Nanodegree Apps!</string>

    <string name="lbl_spotify_streamer">SPOTIFY STREAMER</string>
    <string name="lbl_scores_app">SCORES APP</string>
    <string name="lbl_library_app">LIBRARY APP</string>
    <string name="lbl_build_it_bigger">BUILD IT BIGGER</string>
    <string name="lbl_xyz_reader">XYZ READER</string>
    <string name="lbl_capstone">CAPSTONE: MY OWN APP</string>


    <string name="msg_spotify_reder">This button will launch my Spotify Reader App!</string>
    <string name="msg_score_app">This button will launch my Scores App!</string>
    <string name="msg_library_app">This button will launch my Library App!</string>
    <string name="msg_build_it_bigger">This button will launch my Build it Bigger App!</string>
    <string name="msg_xyz_reader_app">This button will launch my XYZ Reader App!</string>
    <string name="msg_capstone_app">This button will launch my Capston App!</string>
</resources>
