<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activityBackgroundColor"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.portfolio.myapp.MainActivity"
    tools:showIn="@layout/activity_main">


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/title_text"
        android:textSize="@dimen/title_text_size" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="6">

            <Button
                android:id="@+id/button_spotify"
                style="@style/orange_button"
                android:text="@string/lbl_spotify_streamer"
                />

            <Button
                android:id="@+id/button_scoreApp"
                style="@style/orange_button"
                android:text="@string/lbl_scores_app" />

            <Button
                android:id="@+id/button_libraryApp"
                style="@style/orange_button"
                android:text="@string/lbl_library_app"/>

            <Button
                android:id="@+id/button_buildItBigger"
                style="@style/orange_button"
                android:text="@string/lbl_build_it_bigger" />

            <Button
                android:id="@+id/button_xyzReader"
                style="@style/orange_button"
                android:text="@string/lbl_xyz_reader" />

            <Button
                android:id="@+id/button_myOwnApp"
                style="@style/red_button"
                android:text="@string/lbl_capstone" />
        </LinearLayout>
    </ScrollView>


</LinearLayout>
